[gd_scene load_steps=2 format=3 uid="uid://gbd3upblibll"]

[ext_resource type="Script" uid="uid://dxp62j4oghc8b" path="res://ui/loot_ui/loot_ui.gd" id="1_ky5r5"]

[node name="LootUI" type="CanvasLayer"]
script = ExtResource("1_ky5r5")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.43529412)

[node name="CenterContainer" type="CenterContainer" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LootPanel" type="PanelContainer" parent="Root/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Root/CenterContainer/LootPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="Root/CenterContainer/LootPanel/VBoxContainer"]
layout_mode = 2
text = "\"Searching..."

[node name="Items" type="GridContainer" parent="Root/CenterContainer/LootPanel/VBoxContainer"]
layout_mode = 2
columns = 6

[node name="CloseButton" type="Button" parent="Root/CenterContainer/LootPanel/VBoxContainer"]
layout_mode = 2
text = "X"

[connection signal="pressed" from="Root/CenterContainer/LootPanel/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
